[tool.poetry]
name = "example-fabric2"
version = "0.1.0"
description = ""
authors = ["Kanai Masumi <masumi.net@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8"
fabric2 = "^2.6.0"
tee = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
